--- a/2025ab05031_assignment.ipynb
+++ b/2025ab05031_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOrDy+65Uf4AM7VRHYu5oo0",
+      "authorship_tag": "ABX9TyM0mq0/IkUQ04Ep1yyE1FGy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,40 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "2025 sem1 ML Assignment 2\n",
+        "Name: B. Krishna Mohan\n",
+        "BITS ID: 2025AB05031\n",
+        "---\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "PF6mGQJT_eB3"
+        "id": "ZbkIk19iAdnm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PF6mGQJT_eB3",
+        "outputId": "485cfdd4-3359-4ae1-a758-6ba7ba33b1dc"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ML Assignment 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"ML Assignment 2\")"
+      ]
     }
   ]
 }
