--- a/2025ab05031_assignment.ipynb
+++ b/2025ab05031_assignment.ipynb
@@ -40,13 +40,131 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "PF6mGQJT_eB3"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PF6mGQJT_eB3",
+        "outputId": "ed59824b-909f-4a33-8659-968ef834b2ad"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ML Assignment 2\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"ML Assignment 2\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import required libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "import time\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "\n",
+        "# Set random seed for reproducibility\n",
+        "np.random.seed(42)\n",
+        "print('✓ Libraries imported successfully')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MCRkp8veR4gc",
+        "outputId": "0122e7cf-24f3-4d1c-cd6d-85dcca073b81"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✓ Libraries imported successfully\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: Load your dataset\n",
+        "# Example: data = pd.read_csv('your_dataset.csv')\n",
+        "df_stroke_prediction_dataset = pd.read_csv('/content/healthcare-dataset-stroke-data.csv')\n",
+        "\n",
+        "# print(\"Dataset size = {n_rows}:\", df_stroke_prediction_dataset.shape[0])      # most common\n",
+        "# print(\"Dataset features = {n_features}:\", df_stroke_prediction_dataset.shape[1])\n",
+        "# print(\"✓ Dataset loaded successfully\")\n",
+        "\n",
+        "# Drop any row that has at least one NaN\n",
+        "#df_stroke_prediction_dataset = df_stroke_prediction_dataset.dropna()\n",
+        "# Fill all NaN with a constant\n",
+        "df_stroke_prediction_dataset = df_stroke_prediction_dataset.fillna(0)\n",
+        "\n",
+        "# print(\"Any NaN:\", df_stroke_prediction_dataset.isna().values.any())\n",
+        "# print(df_stroke_prediction_dataset.describe())\n",
+        "\n",
+        "# print(\"After clean, Dataset size = {n_rows}:\", df_stroke_prediction_dataset.shape[0])      # most common\n",
+        "# print(\"After clean, Dataset features = {n_features}:\", df_stroke_prediction_dataset.shape[1])\n",
+        "# print(\"✓ Dataset cleaned successfully\")"
+      ],
+      "metadata": {
+        "id": "AQeZalC8R-9N"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO: Preprocess your data\n",
+        "# 1. Separate features (X) and target (y)\n",
+        "# 2. Handle missing values if any\n",
+        "# 3. Encode categorical variables\n",
+        "all_feature_column_names = df_stroke_prediction_dataset.columns\n",
+        "target_column_names = ['stroke'] # 1 or 0\n",
+        "drop_columns = ['stroke', 'gender', 'ever_married', 'work_type', 'Residence_type', 'smoking_status']\n",
+        "\n",
+        "# Example:\n",
+        "# X = data.drop('target', axis=1)\n",
+        "# y = data['target']\n",
+        "X = df_stroke_prediction_dataset.drop(columns=drop_columns, axis=1)\n",
+        "y = df_stroke_prediction_dataset[target_column_names]\n",
+        "# print(X.head(2))\n",
+        "# print(y.head(2))"
+      ],
+      "metadata": {
+        "id": "Boe35klZSIRq"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "Y9z6KOBJP5Xw"
       },
       "outputs": [],
       "source": [
-        "print(\"ML Assignment 2\")"
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# X: features, y: target (from your chosen dataset)\n",
+        "# X, y = ...\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+        ")\n"
       ]
     },
     {
@@ -55,10 +173,66 @@
         "!pip install streamlit"
       ],
       "metadata": {
-        "id": "Vg7SurEaHoyr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vg7SurEaHoyr",
+        "outputId": "df005cc5-57c0-4ced-dc24-1238b949cd7e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting streamlit\n",
+            "  Downloading streamlit-1.52.2-py3-none-any.whl.metadata (9.8 kB)\n",
+            "Requirement already satisfied: altair!=5.4.0,!=5.4.1,<7,>=4.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (5.5.0)\n",
+            "Requirement already satisfied: blinker<2,>=1.5.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (1.9.0)\n",
+            "Requirement already satisfied: cachetools<7,>=4.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (6.2.4)\n",
+            "Requirement already satisfied: click<9,>=7.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (8.3.1)\n",
+            "Requirement already satisfied: numpy<3,>=1.23 in /usr/local/lib/python3.12/dist-packages (from streamlit) (2.0.2)\n",
+            "Requirement already satisfied: packaging>=20 in /usr/local/lib/python3.12/dist-packages (from streamlit) (25.0)\n",
+            "Requirement already satisfied: pandas<3,>=1.4.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (2.2.2)\n",
+            "Requirement already satisfied: pillow<13,>=7.1.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (11.3.0)\n",
+            "Requirement already satisfied: protobuf<7,>=3.20 in /usr/local/lib/python3.12/dist-packages (from streamlit) (5.29.5)\n",
+            "Requirement already satisfied: pyarrow>=7.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (18.1.0)\n",
+            "Requirement already satisfied: requests<3,>=2.27 in /usr/local/lib/python3.12/dist-packages (from streamlit) (2.32.4)\n",
+            "Requirement already satisfied: tenacity<10,>=8.1.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (9.1.2)\n",
+            "Requirement already satisfied: toml<2,>=0.10.1 in /usr/local/lib/python3.12/dist-packages (from streamlit) (0.10.2)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.4.0 in /usr/local/lib/python3.12/dist-packages (from streamlit) (4.15.0)\n",
+            "Requirement already satisfied: watchdog<7,>=2.1.5 in /usr/local/lib/python3.12/dist-packages (from streamlit) (6.0.0)\n",
+            "Requirement already satisfied: gitpython!=3.1.19,<4,>=3.0.7 in /usr/local/lib/python3.12/dist-packages (from streamlit) (3.1.46)\n",
+            "Collecting pydeck<1,>=0.8.0b4 (from streamlit)\n",
+            "  Downloading pydeck-0.9.1-py2.py3-none-any.whl.metadata (4.1 kB)\n",
+            "Requirement already satisfied: tornado!=6.5.0,<7,>=6.0.3 in /usr/local/lib/python3.12/dist-packages (from streamlit) (6.5.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (3.1.6)\n",
+            "Requirement already satisfied: jsonschema>=3.0 in /usr/local/lib/python3.12/dist-packages (from altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (4.26.0)\n",
+            "Requirement already satisfied: narwhals>=1.14.2 in /usr/local/lib/python3.12/dist-packages (from altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (2.15.0)\n",
+            "Requirement already satisfied: gitdb<5,>=4.0.1 in /usr/local/lib/python3.12/dist-packages (from gitpython!=3.1.19,<4,>=3.0.7->streamlit) (4.0.12)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas<3,>=1.4.0->streamlit) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas<3,>=1.4.0->streamlit) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas<3,>=1.4.0->streamlit) (2025.3)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.27->streamlit) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.27->streamlit) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.27->streamlit) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests<3,>=2.27->streamlit) (2026.1.4)\n",
+            "Requirement already satisfied: smmap<6,>=3.0.1 in /usr/local/lib/python3.12/dist-packages (from gitdb<5,>=4.0.1->gitpython!=3.1.19,<4,>=3.0.7->streamlit) (5.0.2)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (3.0.3)\n",
+            "Requirement already satisfied: attrs>=22.2.0 in /usr/local/lib/python3.12/dist-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (25.4.0)\n",
+            "Requirement already satisfied: jsonschema-specifications>=2023.03.6 in /usr/local/lib/python3.12/dist-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (2025.9.1)\n",
+            "Requirement already satisfied: referencing>=0.28.4 in /usr/local/lib/python3.12/dist-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (0.37.0)\n",
+            "Requirement already satisfied: rpds-py>=0.25.0 in /usr/local/lib/python3.12/dist-packages (from jsonschema>=3.0->altair!=5.4.0,!=5.4.1,<7,>=4.0->streamlit) (0.30.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas<3,>=1.4.0->streamlit) (1.17.0)\n",
+            "Downloading streamlit-1.52.2-py3-none-any.whl (9.0 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.0/9.0 MB\u001b[0m \u001b[31m70.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading pydeck-0.9.1-py2.py3-none-any.whl (6.9 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.9/6.9 MB\u001b[0m \u001b[31m76.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pydeck, streamlit\n",
+            "Successfully installed pydeck-0.9.1 streamlit-1.52.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -92,10 +266,35 @@
         "            st.bar_chart(df_results.set_index(\"Model\")[\"accuracy\"])\n"
       ],
       "metadata": {
-        "id": "ni33WQRMHlAY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ni33WQRMHlAY",
+        "outputId": "1f4a5af3-8339-4b98-85a9-c61bf2eff353"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "2026-01-14 17:05:46.857 WARNING streamlit.runtime.scriptrunner_utils.script_run_context: Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.065 \n",
+            "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+            "  command:\n",
+            "\n",
+            "    streamlit run /usr/local/lib/python3.12/dist-packages/colab_kernel_launcher.py [ARGUMENTS]\n",
+            "2026-01-14 17:05:47.067 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.068 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.070 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.072 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.072 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.073 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.075 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
+            "2026-01-14 17:05:47.076 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -105,10 +304,33 @@
         "!pip install Flask"
       ],
       "metadata": {
-        "id": "ZIjxSvy_IRwo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZIjxSvy_IRwo",
+        "outputId": "f3cc075d-c812-4d54-ce30-2781a6328068"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0K⠴\u001b[1G\u001b[0K⠦\u001b[1G\u001b[0K⠧\u001b[1G\u001b[0K⠇\u001b[1G\u001b[0K⠏\u001b[1G\u001b[0K⠋\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0K⠹\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K\n",
+            "added 22 packages in 3s\n",
+            "\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K\n",
+            "\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K3 packages are looking for funding\n",
+            "\u001b[1G\u001b[0K⠸\u001b[1G\u001b[0K  run `npm fund` for details\n",
+            "\u001b[1G\u001b[0K⠼\u001b[1G\u001b[0KRequirement already satisfied: Flask in /usr/local/lib/python3.12/dist-packages (3.1.2)\n",
+            "Requirement already satisfied: blinker>=1.9.0 in /usr/local/lib/python3.12/dist-packages (from Flask) (1.9.0)\n",
+            "Requirement already satisfied: click>=8.1.3 in /usr/local/lib/python3.12/dist-packages (from Flask) (8.3.1)\n",
+            "Requirement already satisfied: itsdangerous>=2.2.0 in /usr/local/lib/python3.12/dist-packages (from Flask) (2.2.0)\n",
+            "Requirement already satisfied: jinja2>=3.1.2 in /usr/local/lib/python3.12/dist-packages (from Flask) (3.1.6)\n",
+            "Requirement already satisfied: markupsafe>=2.1.1 in /usr/local/lib/python3.12/dist-packages (from Flask) (3.0.3)\n",
+            "Requirement already satisfied: werkzeug>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from Flask) (3.1.5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -125,10 +347,22 @@
         "\n"
       ],
       "metadata": {
-        "id": "EQrqJQzEIPaK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EQrqJQzEIPaK",
+        "outputId": "ef1a4111-625f-4545-a045-860cd1e81243"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing app.py\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -136,10 +370,23 @@
         "!streamlit run app.py &>/content/logs.txt & npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "8p0yKCnFJwPr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8p0yKCnFJwPr",
+        "outputId": "52d70498-ecf9-4b0e-be42-04871a4f901c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1G\u001b[0K⠙\u001b[1G\u001b[0Kyour url is: https://clean-hornets-shine.loca.lt\n",
+            "^C\n"
+          ]
+        }
+      ]
     }
   ]
 }
