--- a/2025ab05031_assignment.ipynb
+++ b/2025ab05031_assignment.ipynb
@@ -170,6 +170,134 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from xgboost import XGBClassifier"
+      ],
+      "metadata": {
+        "id": "NlckBizEQEt8"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "models = {\n",
+        "    \"Logistic Regression\": LogisticRegression(max_iter=1000),\n",
+        "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
+        "    \"KNN\": KNeighborsClassifier(n_neighbors=5),\n",
+        "    \"Naive Bayes (Gaussian)\": GaussianNB(),\n",
+        "    \"Random Forest\": RandomForestClassifier(\n",
+        "        n_estimators=200, random_state=42\n",
+        "    ),\n",
+        "    \"XGBoost\": XGBClassifier(\n",
+        "        n_estimators=200,\n",
+        "        learning_rate=0.1,\n",
+        "        max_depth=4,\n",
+        "        subsample=0.8,\n",
+        "        colsample_bytree=0.8,\n",
+        "        objective=\"binary:logistic\"  # change if multiclass\n",
+        "    ),\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Cp2ZkFSmQbyT"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import (\n",
+        "    accuracy_score, roc_auc_score,\n",
+        "    precision_score, recall_score, f1_score\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "5FLxpbHhetGK"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results = []\n",
+        "multi_auc = \"ovr\"\n",
+        "for name, model in models.items():\n",
+        "    model.fit(X_train, y_train)                # train\n",
+        "\n",
+        "    y_pred = model.predict(X_test)             # class labels\n",
+        "    # probabilities or scores for AUC\n",
+        "    if hasattr(model, \"predict_proba\"):\n",
+        "        y_score = model.predict_proba(X_test)\n",
+        "        # if binary classification, take column 1\n",
+        "        if y_score.shape[1] == 2:\n",
+        "            y_score_used = y_score[:, 1]\n",
+        "        else:\n",
+        "            # one-vs-rest macro AUC for multiclass\n",
+        "            y_score_used = y_score\n",
+        "            #multi_auc = \"ovr\"\n",
+        "    else:\n",
+        "        y_score_used = model.decision_function(X_test)\n",
+        "        #multi_auc = \"ovr\"\n",
+        "\n",
+        "    # choose 'binary' vs 'macro' depending on your problem\n",
+        "    average_type = \"binary\" if len(set(y)) == 2 else \"macro\"\n",
+        "\n",
+        "    metrics = {\n",
+        "        \"Model\": name,\n",
+        "        \"Accuracy\": accuracy_score(y_test, y_pred),\n",
+        "        \"Precision\": precision_score(y_test, y_pred, average=average_type),\n",
+        "        \"Recall\": recall_score(y_test, y_pred, average=average_type),\n",
+        "        \"F1\": f1_score(y_test, y_pred, average=average_type),\n",
+        "    }\n",
+        "\n",
+        "    # ROC‑AUC: handle binary vs multiclass.[web:11][web:22]\n",
+        "    if len(set(y)) == 2:\n",
+        "        metrics[\"AUC\"] = roc_auc_score(y_test, y_score_used)\n",
+        "    else:\n",
+        "        metrics[\"AUC\"] = roc_auc_score(\n",
+        "            y_test, y_score_used, multi_class=multi_auc, average=\"macro\"\n",
+        "        )\n",
+        "\n",
+        "    results.append(metrics)\n",
+        "\n",
+        "results_df = pd.DataFrame(results)\n",
+        "print(results_df)"
+      ],
+      "metadata": {
+        "id": "tHvfTjmRexnh",
+        "outputId": "8fc3295a-f0ff-49cf-a2eb-0a7bc911caab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                    Model  Accuracy  Precision    Recall        F1       AUC\n",
+            "0     Logistic Regression  0.951076   0.475538  0.500000  0.487462  0.832922\n",
+            "1           Decision Tree  0.913894   0.571396  0.584794  0.577249  0.584794\n",
+            "2                     KNN  0.951076   0.475538  0.500000  0.487462  0.524681\n",
+            "3  Naive Bayes (Gaussian)  0.925636   0.581312  0.571996  0.576258  0.819877\n",
+            "4           Random Forest  0.949119   0.475490  0.498971  0.486948  0.789660\n",
+            "5                 XGBoost  0.949119   0.600933  0.508457  0.505453  0.819383\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip install streamlit"
       ],
       "metadata": {
