--- a/2025ab05031_assignment.ipynb
+++ b/2025ab05031_assignment.ipynb
@@ -215,13 +215,14 @@
       "source": [
         "from sklearn.metrics import (\n",
         "    accuracy_score, roc_auc_score,\n",
-        "    precision_score, recall_score, f1_score\n",
+        "    precision_score, recall_score, f1_score,\n",
+        "    matthews_corrcoef\n",
         ")"
       ],
       "metadata": {
         "id": "5FLxpbHhetGK"
       },
-      "execution_count": 17,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -256,6 +257,7 @@
         "        \"Precision\": precision_score(y_test, y_pred, average=average_type),\n",
         "        \"Recall\": recall_score(y_test, y_pred, average=average_type),\n",
         "        \"F1\": f1_score(y_test, y_pred, average=average_type),\n",
+        "        \"MCC\": matthews_corrcoef(y_test, y_pred),\n",
         "    }\n",
         "\n",
         "    # ROC‑AUC: handle binary vs multiclass.[web:11][web:22]\n",
@@ -269,28 +271,42 @@
         "    results.append(metrics)\n",
         "\n",
         "results_df = pd.DataFrame(results)\n",
-        "print(results_df)"
+        "print(results_df)\n",
+        "\n",
+        "# Interpreting the results\n",
+        "# If accuracy and F1 are high, and MCC is also high\n",
+        "\n",
+        "# If F1 is high but MCC is moderate/low, the model is good on positives\n",
+        "# but probably weak on negatives; you may be over‑fitting the minority/positive class"
       ],
       "metadata": {
-        "id": "tHvfTjmRexnh",
-        "outputId": "8fc3295a-f0ff-49cf-a2eb-0a7bc911caab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tHvfTjmRexnh",
+        "outputId": "6f65e077-9164-4101-ec75-65fc9844d9c3"
       },
-      "execution_count": 18,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "                    Model  Accuracy  Precision    Recall        F1       AUC\n",
-            "0     Logistic Regression  0.951076   0.475538  0.500000  0.487462  0.832922\n",
-            "1           Decision Tree  0.913894   0.571396  0.584794  0.577249  0.584794\n",
-            "2                     KNN  0.951076   0.475538  0.500000  0.487462  0.524681\n",
-            "3  Naive Bayes (Gaussian)  0.925636   0.581312  0.571996  0.576258  0.819877\n",
-            "4           Random Forest  0.949119   0.475490  0.498971  0.486948  0.789660\n",
-            "5                 XGBoost  0.949119   0.600933  0.508457  0.505453  0.819383\n"
+            "                    Model  Accuracy  Precision    Recall        F1       MCC  \\\n",
+            "0     Logistic Regression  0.951076   0.475538  0.500000  0.487462  0.000000   \n",
+            "1           Decision Tree  0.913894   0.571396  0.584794  0.577249  0.155615   \n",
+            "2                     KNN  0.951076   0.475538  0.500000  0.487462  0.000000   \n",
+            "3  Naive Bayes (Gaussian)  0.925636   0.581312  0.571996  0.576258  0.153024   \n",
+            "4           Random Forest  0.949119   0.475490  0.498971  0.486948 -0.010043   \n",
+            "5                 XGBoost  0.949119   0.600933  0.508457  0.505453  0.058432   \n",
+            "\n",
+            "        AUC  \n",
+            "0  0.832922  \n",
+            "1  0.584794  \n",
+            "2  0.524681  \n",
+            "3  0.819877  \n",
+            "4  0.789660  \n",
+            "5  0.819383  \n"
           ]
         }
       ]
